[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/enemies/enemy_beetle.gd" type="Script" id=1]
[ext_resource path="res://sprites/white_light.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="beetle_node" type="Node2D"]

transform/pos = Vector2( 96, 352 )

[node name="left_turn" type="Position2D" parent="."]

transform/pos = Vector2( -96, 0 )

[node name="right_turn" type="Position2D" parent="."]

transform/pos = Vector2( 352, 0 )

[node name="beetle" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
movement_speed = 128
flippedH = false
gravity_enabled = false
max_HP = 10
hp = 10
invulnerability_time = 5
uses_invulnerability_timer = true
has_invulnarable_animation = false
invulnerable_animation_player = "SecondAnimationPlayer"
damage = 5
going_right = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="beetle"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="beetle"]

transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 2 )

[node name="player_detector" type="RayCast2D" parent="beetle"]

enabled = true
cast_to = Vector2( 500, 500 )
layer_mask = 5
type_mask = 15


